Fix dropdown icon positions for base/compare buttons
It looks misaligned even without any CSS modifications!

--- a/github-classic.user.css
+++ b/github-classic.user.css
@@ -126,6 +126,11 @@
         }
     }
 
+    /* Fix misaligned arrow on base/compare dropdown buttons */
+    .select-menu-button::after {
+        margin-top: 5px;
+    }
+
 
     /************************************************
     * Code tab
